--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=SparkFun Electronics
 maintainer=SparkFun Electronics
 sentence=Library for SparkFun eInk displays
 paragraph= 3 color eInk
-category=Displays
+category=Display
 url=https://github.com/sparkfun/SparkFun_eInk_Arduino_Library
 architectures=*
