--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=SparkFun eInk Arduino Library
+name=SparkFun ePaper Arduino Library
 version=1.0.0
 author=SparkFun Electronics
 maintainer=SparkFun Electronics
-sentence=Library for SparkFun eInk displays
-paragraph= 3 color eInk
+sentence=Library for SparkFun ePaper displays
+paragraph= 3 color ePaper
 category=Display
-url=https://github.com/sparkfun/SparkFun_eInk_Arduino_Library
+url=https://github.com/sparkfun/SparkFun_ePaper_Arduino_Library
 architectures=*
